--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -118,6 +118,9 @@
             </div>
             <div class="subject">
                 <h2>Subject</h2>
+                <p>Other than the alloted duties of worksheet,lesson plans, assessment sheets, facebook reports, reviews,KPI
+                    Prepared children for games for Math quiz ,shared questions  for quiz,motivated students for making maze 
+                    on Canva,share feedback using padlet, content review , book review and contribution </p>
                 <!-- Placeholder for subject content -->
             </div>
         </div>
