--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -59,7 +59,7 @@
             border-radius: 10px;
             padding: 1.5rem;
             width: 45%;
-            background: #ffffff;
+            background: #FFB6C1;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
         }
@@ -118,9 +118,9 @@
             </div>
             <div class="subject">
                 <h2>Subject</h2>
-                <p>Other than the alloted duties of worksheet,lesson plans, assessment sheets, facebook reports, reviews,KPI
-                    Prepared children for games for Math quiz ,shared questions  for quiz,motivated students for making maze 
-                    on Canva,share feedback using padlet, content review , book review and contribution </p>
+                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
+                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
+                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
                 <!-- Placeholder for subject content -->
             </div>
         </div>
