--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -59,7 +59,7 @@
             border-radius: 10px;
             padding: 1.5rem;
             width: 45%;
-            background: #FFB6C1;
+            background: #F5F5DC;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
         }
