--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -73,7 +73,7 @@
         .activities div {
             margin: 0.75rem 0;
             padding: 1rem;
-            background: #e0e4ff;
+            background: #FFE5B4;
             text-align: center;
             border-radius: 8px;
             cursor: pointer;
