--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         nav {
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            background: linear-gradient(to right, #000000, #8f94fb);
             padding: 1rem;
             display: flex;
             justify-content: center;
@@ -68,7 +68,7 @@
         }
         .activities h2, .subject h2 {
             margin-bottom: 1rem;
-            color: #4e54c8;
+            color: #000000;
         }
         .activities div {
             margin: 0.75rem 0;
@@ -97,7 +97,7 @@
             transform: translateY(-5px);
         }
         .evidence h2 {
-            color: #4e54c8;
+            color: #000000;
         }
     </style>
 </head>
