--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         nav {
-            background: linear-gradient(to right, #000000, #8f94fb);
+            background: #000000;
             padding: 1rem;
             display: flex;
             justify-content: center;
