--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         nav {
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            background: #000000;
             padding: 1rem;
             display: flex;
             justify-content: center;
@@ -59,7 +59,7 @@
             border-radius: 10px;
             padding: 1.5rem;
             width: 45%;
-            background: #ffffff;
+            background: #F5F5DC;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
         }
@@ -68,12 +68,12 @@
         }
         .activities h2, .subject h2 {
             margin-bottom: 1rem;
-            color: #4e54c8;
+            color: #000000;
         }
         .activities div {
             margin: 0.75rem 0;
             padding: 1rem;
-            background: #e0e4ff;
+            background: #FFE5B4;
             text-align: center;
             border-radius: 8px;
             cursor: pointer;
@@ -97,15 +97,19 @@
             transform: translateY(-5px);
         }
         .evidence h2 {
-            color: #4e54c8;
+            color: #000000;
         }
     </style>
 </head>
 <body>
     <nav>
-        <a href="students.html">Students</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="myself.html">Myself</a>
+        <a href="D:\per\ma\public\index.html">Home</a>
+        <a href="D:\per\ma\public\2024-25\dashboard24.html">2024-25</a>
+        <a href="D:\per\ma\public\2025-26\dashboard25.html">2025-26</a>
+        <a href="D:\per\ma\public\2026-27\dashboard26.html">2026-27</a>
+        <a href="D:\per\ma\public\2027-28\dashboard27.html">2027-28</a>
+        <a href="D:\per\ma\public\2028-29\dashboard28.html">2028-29</a>
+        <a href="D:\per\ma\public\2029-30\dashboard29.html">2029-30</a>
     </nav>
 
     <div class="container">
@@ -113,11 +117,14 @@
             <div class="activities">
                 <h2>Activities</h2>
                 <div onclick="location.href='students.html'">Students</div>
-                <div onclick="location.href='teaching.html'">Teaching</div>
+                <div onclick="location.href='teaching.html'">Teacher</div>
                 <div onclick="location.href='myself.html'">Myself</div>
             </div>
             <div class="subject">
                 <h2>Subject</h2>
+                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
+                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
+                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
                 <!-- Placeholder for subject content -->
             </div>
         </div>
