--- a/per/ma/public/2028-29/dashboard28.html
+++ b/per/ma/public/2028-29/dashboard28.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         nav {
-            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            background: #000000;
             padding: 1rem;
             display: flex;
             justify-content: center;
@@ -55,22 +55,50 @@
             justify-content: space-between;
             margin-bottom: 2rem;
         }
-        .year24, .year25, .year26, .year27, .year28, .year29 {
+        .activities, .subject {
             border-radius: 10px;
             padding: 1.5rem;
             width: 45%;
-            background: #ffffff;
+            background: #F5F5DC;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
         }
-        .year24:hover, .year25:hover,.year26:hover,.year27:hover,.year28:hover,.year29:hover {
+        .activities:hover, .subject:hover {
             transform: translateY(-5px);
         }
-        .year24 h2, .year25 h2,.year26 h2,.year27 h2,.year28 h2,.year29 h2 {
+        .activities h2, .subject h2 {
             margin-bottom: 1rem;
-            color: #4e54c8;
+            color: #000000;
         }
-        
+        .activities div {
+            margin: 0.75rem 0;
+            padding: 1rem;
+            background: #FFE5B4;
+            text-align: center;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: background 0.3s, transform 0.2s;
+        }
+        .activities div:hover {
+            background-color: #c6ccff;
+            transform: scale(1.02);
+        }
+        .evidence {
+            border-radius: 10px;
+            padding: 1.5rem;
+            width: 90%;
+            background: #ffffff;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+        .evidence:hover {
+            transform: translateY(-5px);
+        }
+        .evidence h2 {
+            color: #000000;
+        }
     </style>
 </head>
 <body>
@@ -85,24 +113,25 @@
     </nav>
 
     <div class="container">
-            <div class="year24">
-                <h2>2024-25</h2>
+        <div class="top-section">
+            <div class="activities">
+                <h2>Activities</h2>
+                <div onclick="location.href='students.html'">Students</div>
+                <div onclick="location.href='teaching.html'">Teacher</div>
+                <div onclick="location.href='myself.html'">Myself</div>
             </div>
-            <div class="year25">
-                <h2>2025-26</h2>
-           </div>
-           <div class="year26">
-            <h2>2026-27</h2>
+            <div class="subject">
+                <h2>Subject</h2>
+                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
+                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
+                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
+                <!-- Placeholder for subject content -->
             </div>
-            <div class="year27">
-                <h2>2027-28</h2>
-            </div>
-            <div class="year28">
-                <h2>2028-29</h2>
-            </div>
-            <div class="year29">
-                <h2>2029-30</h2>
-            </div>
+        </div>
+        <div class="evidence">
+            <h2>Evidence</h2>
+            <!-- Placeholder for evidence content -->
+        </div>
     </div>
 </body>
 </html>
