--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -1,108 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Welcome Page</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
-            color: #333;
-        }
-        nav {
-            background: #000000;
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        nav a {
-            color: white;
-            margin: 0 1rem;
-            text-decoration: none;
-            font-weight: bold;
-            position: relative;
-        }
-        nav a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            background: white;
-            left: 0;
-            bottom: -4px;
-            transition: 0.3s ease;
-        }
-        nav a:hover::after {
-            width: 100%;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2rem;
-        }
-        .top-section {
-            display: flex;
-            width: 90%;
-            justify-content: space-between;
-            margin-bottom: 2rem;
-        }
-        .year24, .year25, .year26, .year27, .year28, .year29 {
-            border-radius: 10px;
-            padding: 1.5rem;
-            width: 45%;
-            background: #F5F5DC;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-        .year24:hover, .year25:hover,.year26:hover,.year27:hover,.year28:hover,.year29:hover {
-            transform: translateY(-5px);
-        }
-        .year24 h2, .year25 h2,.year26 h2,.year27 h2,.year28 h2,.year29 h2 {
-            margin-bottom: 1rem;
-            color: #000000;
-        }
-        
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dashboard Welcome Page</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f2f5;
+      color: #333;
+    }
+    nav {
+      background: #000;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+      position: relative;
+    }
+    nav a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      background: white;
+      left: 0;
+      bottom: -4px;
+      transition: 0.3s ease;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .card {
+      background: linear-gradient(135deg, #e3ffe7, #d9e7ff);
+      border-radius: 16px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      padding: 2rem;
+      text-align: center;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .card:hover {
+      transform: translateY(-10px) scale(1.02);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    }
+
+    .card h2 {
+      margin-bottom: 0.5rem;
+      color: #222;
+      font-size: 1.5rem;
+    }
+
+    .card i {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #4a4a4a;
+    }
+
+    @media (max-width: 600px) {
+      .card h2 {
+        font-size: 1.2rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="/2024-25/dashboard24.html">2024-25</a>
-        <a href="/2025-26/dashboard25.html">2025-26</a>
-        <a href="/2026-27/dashboard26.html">2026-27</a>
-        <a href="/public/2027-28/dashboard27.html">2027-28</a>
-        <a href="/2028-29/dashboard28.html">2028-29</a>
-        <a href="/2029-30/dashboard29.html">2029-30</a>
-    </nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="/2024-25/dashboard24.html">2024-25</a>
+    <a href="/2025-26/dashboard25.html">2025-26</a>
+    <a href="/2026-27/dashboard26.html">2026-27</a>
+    <a href="/2027-28/dashboard27.html">2027-28</a>
+    <a href="/2028-29/dashboard28.html">2028-29</a>
+    <a href="/2029-30/dashboard29.html">2029-30</a>
+  </nav>
 
-    <div class="container">
-            <div class="year24">
-                <h2>2024-25</h2>
-            </div>
-            <div class="year25">
-                <h2>2025-26</h2>
-           </div>
-           <div class="year26">
-            <h2>2026-27</h2>
-            </div>
-            <div class="year27">
-                <h2>2027-28</h2>
-            </div>
-            <div class="year28">
-                <h2>2028-29</h2>
-            </div>
-            <div class="year29">
-                <h2>2029-30</h2>
-            </div>
+  <div class="container">
+    <div class="card">
+      <i class="fas fa-calendar-alt"></i>
+      <h2>2024-25</h2>
     </div>
+    <div class="card">
+      <i class="fas fa-calendar-check"></i>
+      <h2>2025-26</h2>
+    </div>
+    <div class="card">
+      <i class="fas fa-calendar-week"></i>
+      <h2>2026-27</h2>
+    </div>
+    <div class="card">
+      <i class="fas fa-calendar-day"></i>
+      <h2>2027-28</h2>
+    </div>
+    <div class="card">
+      <i class="fas fa-calendar-plus"></i>
+      <h2>2028-29</h2>
+    </div>
+    <div class="card">
+      <i class="fas fa-calendar"></i>
+      <h2>2029-30</h2>
+    </div>
+  </div>
 </body>
 </html>
