--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -15,6 +15,10 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f2f5;
       color: #333;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     nav {
       background: #000;
@@ -22,6 +26,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: absolute;
+      top: 0;
+      width: 100%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     nav a {
@@ -45,13 +52,20 @@
       width: 100%;
     }
 
+    .container-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      padding-top: 4rem; /* to avoid nav overlap */
+    }
+
     .container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem;
-      max-width: 1200px;
-      margin: auto;
+      grid-template-columns: repeat(3, 250px);
+      gap: 2rem;
+      justify-content: center;
     }
 
     .card {
@@ -83,9 +97,14 @@
       color: #4a4a4a;
     }
 
-    @media (max-width: 600px) {
-      .card h2 {
-        font-size: 1.2rem;
+    .year27 {
+      grid-column: 1 / 2;
+    }
+
+    @media (max-width: 800px) {
+      .container {
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        padding: 1rem;
       }
     }
   </style>
@@ -101,30 +120,14 @@
     <a href="/2029-30/dashboard29.html">2029-30</a>
   </nav>
 
-  <div class="container">
-    <div class="card">
-      <i class="fas fa-calendar-alt"></i>
-      <h2>2024-25</h2>
-    </div>
-    <div class="card">
-      <i class="fas fa-calendar-check"></i>
-      <h2>2025-26</h2>
-    </div>
-    <div class="card">
-      <i class="fas fa-calendar-week"></i>
-      <h2>2026-27</h2>
-    </div>
-    <div class="card">
-      <i class="fas fa-calendar-day"></i>
-      <h2>2027-28</h2>
-    </div>
-    <div class="card">
-      <i class="fas fa-calendar-plus"></i>
-      <h2>2028-29</h2>
-    </div>
-    <div class="card">
-      <i class="fas fa-calendar"></i>
-      <h2>2029-30</h2>
+  <div class="container-wrapper">
+    <div class="container">
+      <div class="card"><i class="fas fa-calendar-alt"></i><h2>2024-25</h2></div>
+      <div class="card"><i class="fas fa-calendar-check"></i><h2>2025-26</h2></div>
+      <div class="card"><i class="fas fa-calendar-week"></i><h2>2026-27</h2></div>
+      <div class="card year27"><i class="fas fa-calendar-day"></i><h2>2027-28</h2></div>
+      <div class="card"><i class="fas fa-calendar-plus"></i><h2>2028-29</h2></div>
+      <div class="card"><i class="fas fa-calendar"></i><h2>2029-30</h2></div>
     </div>
   </div>
 </body>
