--- a/per/ma/public/2025-26/dashboard25.html
+++ b/per/ma/public/2025-26/dashboard25.html
@@ -103,7 +103,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/2024-25/dashboard24.html">2024-25</a>
         <a href="/2025-26/dashboard25.html">2025-26</a>
         <a href="/2026-27/dashboard26.html">2026-27</a>
