--- a/per/ma/public/2024-25/students.html
+++ b/per/ma/public/2024-25/students.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard Welcome Page</title>
+  <title>Dashboard Students2k24-25</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     * {
@@ -73,7 +73,7 @@
     }
 
     .card {
-      background: linear-gradient(135deg, #e3ffe7, #d9e7ff);
+      background: #e1c1c1;
       border-radius: 16px;
       box-shadow: 0 10px 20px rgba(0,0,0,0.1);
       padding: 2rem;
@@ -106,19 +106,6 @@
       line-height: 1.6;
     }
 
-    @media (max-width: 600px) {
-      .card {
-        padding: 1.5rem;
-      }
-
-      .card h2 {
-        font-size: 1.4rem;
-      }
-
-      .card i {
-        font-size: 2rem;
-      }
-    }
   </style>
 </head>
 <body>
@@ -135,7 +122,6 @@
   <div class="container-wrapper">
     <div class="container">
       <div class="card">
-        <i class="fas fa-calendar-alt"></i>
         <h2>House Activities</h2>
         <p>
           The house activities like recitation, story narration, solo dance were conducted to develop confidence in students.
@@ -147,7 +133,6 @@
       </div>
 
       <div class="card">
-        <i class="fas fa-calendar-check"></i>
         <h2>Club Activities</h2>
         <p>
           In the Eco club, students participated in Vanmahotsav, skits for traffic awareness, and energy conservation.
