--- a/per/ma/public/2025-26/dashboard25.html
+++ b/per/ma/public/2025-26/dashboard25.html
@@ -122,15 +122,13 @@
             </div>
             <div class="subject">
                 <h2>Subject</h2>
-                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
-                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
-                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
-                <!-- Placeholder for subject content -->
+                <p><!--Subject ka content yahan likho--> </p>
+                
             </div>
         </div>
         <div class="evidence">
             <h2>Evidence</h2>
-            <!-- Placeholder for evidence content -->
+            <!-- Evidence yahan likho -->
         </div>
     </div>
 </body>
