--- a/per/ma/public/2027-28/dashboard27.html
+++ b/per/ma/public/2027-28/dashboard27.html
@@ -122,10 +122,8 @@
             </div>
             <div class="subject">
                 <h2>Subject</h2>
-                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
-                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
-                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
-                <!-- Placeholder for subject content -->
+                <p><!-- Placeholder for subject content --></p>
+                
             </div>
         </div>
         <div class="evidence">
