--- a/per/ma/public/2029-30/teaching.html
+++ b/per/ma/public/2029-30/teaching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard Myself2k24-25</title>
+  <title>Dashboard Students2k29-30</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     * {
@@ -124,13 +124,7 @@
       <div class="card">
         <h2>Activities</h2>
         <p>
-            Completed various certification courses, mental health, use of Al, digital initiatives.
-            Prepared students for traffic and energy conservation skits.
-            Prepared students for International days.
-            Framed reports for International days.
-            Written certificates for sports events.
-            Presented skit on Children's day.Made Time table. Iso CCA and event management. Facebook image uploading
-            Website result uploading, snapshot, club reports, mom, insight, ICL.
+            <!--Content yahan-->
         </p>
       </div>
     </div>
