--- a/per/ma/public/2024-25/teaching.html
+++ b/per/ma/public/2024-25/teaching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard Students2k24-25</title>
+  <title>Dashboard Teacher2k24-25</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     * {
