--- a/per/ma/public/2026-27/students.html
+++ b/per/ma/public/2026-27/students.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard Myself2k24-25</title>
+  <title>Dashboard Students2k26-27</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     * {
@@ -122,15 +122,16 @@
   <div class="container-wrapper">
     <div class="container">
       <div class="card">
-        <h2>Activities</h2>
+        <h2>House Activities</h2>
         <p>
-            Completed various certification courses, mental health, use of Al, digital initiatives.
-            Prepared students for traffic and energy conservation skits.
-            Prepared students for International days.
-            Framed reports for International days.
-            Written certificates for sports events.
-            Presented skit on Children's day.Made Time table. Iso CCA and event management. Facebook image uploading
-            Website result uploading, snapshot, club reports, mom, insight, ICL.
+          <!--House activities content yahan-->
+        </p>
+      </div>
+
+      <div class="card">
+        <h2>Club Activities</h2>
+        <p>
+          <!--Club activities content yahan -->
         </p>
       </div>
     </div>
