--- a/per/ma/public/2029-30/dashboard29.html
+++ b/per/ma/public/2029-30/dashboard29.html
@@ -122,9 +122,7 @@
             </div>
             <div class="subject">
                 <h2>Subject</h2>
-                <p>Other than the alloted duties of worksheet, lesson plans, assessment sheets, facebook reports, reviews, KPI,
-                    prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
-                    on Canva,share feedback using padlet, content review, book review and contribution. </p>
+                <p><!--Content yahan-->> </p>
                 <!-- Placeholder for subject content -->
             </div>
         </div>
