--- a/per/ma/public/2027-28/dashboard27.html
+++ b/per/ma/public/2027-28/dashboard27.html
@@ -107,7 +107,7 @@
         <a href="/2024-25/dashboard24.html">2024-25</a>
         <a href="/2025-26/dashboard25.html">2025-26</a>
         <a href="/2026-27/dashboard26.html">2026-27</a>
-        <a href="/public/2027-28/dashboard27.html">2027-28</a>
+        <a href="/2027-28/dashboard27.html">2027-28</a>
         <a href="/2028-29/dashboard28.html">2028-29</a>
         <a href="/2029-30/dashboard29.html">2029-30</a>
     </nav>
