--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -130,9 +130,14 @@
         </div>
         <div class="evidence">
             <h2>Evidence</h2>
-            <p>https://read.bookcreator.com/L3p09VMiRPMmNKeERZImhkCpQXx1/bJCkJ39JTcCHxqYv6hCoLQ</p>
+            <p>
+                <a href="https://read.bookcreator.com/L3p09VMiRPMmNKeERZImhkCpQXx1/bJCkJ39JTcCHxqYv6hCoLQ" target="_blank">
+                    Visit Page
+                </a>
+            </p>
             <!-- Placeholder for evidence content -->
         </div>
+        
     </div>
 </body>
 </html>
