--- a/per/ma/public/2024-25/teaching.html
+++ b/per/ma/public/2024-25/teaching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dashboard Teacher2k24-25</title>
+  <title>Dashboard Teachers2k24-25</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     * {
@@ -11,36 +11,35 @@
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f2f5;
       color: #333;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
     }
-
     nav {
       background: #000;
       padding: 1rem;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      width: 100%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: relative;
     }
-
-    nav a {
+    .nav-links {
+      display: flex;
+      gap: 1rem;
+    }
+    .nav-links a {
       color: white;
-      margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
       position: relative;
+      font-size: 1rem;
     }
-
-    nav a::after {
+    .nav-links a::after {
       content: '';
       position: absolute;
       width: 0;
@@ -50,20 +49,29 @@
       bottom: -4px;
       transition: 0.3s ease;
     }
-
-    nav a:hover::after {
+    .nav-links a:hover::after {
       width: 100%;
     }
-
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .hamburger span {
+      height: 3px;
+      width: 25px;
+      background: white;
+      margin: 4px;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
     .container-wrapper {
       flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 100%;
       padding: 2rem;
     }
-
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -71,7 +79,6 @@
       width: 90%;
       max-width: 1200px;
     }
-
     .card {
       background: #e1c1c1;
       border-radius: 16px;
@@ -82,54 +89,88 @@
       cursor: pointer;
       overflow: hidden;
     }
-
     .card:hover {
       transform: translateY(-10px) scale(1.02);
       box-shadow: 0 20px 40px rgba(0,0,0,0.2);
     }
-
     .card h2 {
       margin-bottom: 1rem;
       color: #222;
       font-size: 1.8rem;
     }
-
     .card i {
       font-size: 2.5rem;
       margin-bottom: 1rem;
       color: #4a4a4a;
     }
-
     .card p {
       text-align: justify;
       font-size: 1rem;
       line-height: 1.6;
     }
 
+    /* --- Responsive styles for mobile --- */
+    @media (max-width: 768px) {
+      .nav-links {
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        background: #000;
+        flex-direction: column;
+        width: 200px;
+        display: none;
+        text-align: right;
+        border-radius: 5px;
+        padding: 1rem;
+      }
+      .nav-links a {
+        margin: 0.5rem 0;
+      }
+      .hamburger {
+        display: flex;
+      }
+      .nav-active {
+        display: flex;
+      }
+    }
   </style>
 </head>
 <body>
+
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/2024-25/dashboard24.html">2024-25</a>
-    <a href="/2025-26/dashboard25.html">2025-26</a>
-    <a href="/2026-27/dashboard26.html">2026-27</a>
-    <a href="/2027-28/dashboard27.html">2027-28</a>
-    <a href="/2028-29/dashboard28.html">2028-29</a>
-    <a href="/2029-30/dashboard29.html">2029-30</a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="nav-links" id="navLinks">
+      <a href="/index.html">Home</a>
+      <a href="/2024-25/dashboard24.html">2024-25</a>
+      <a href="/2025-26/dashboard25.html">2025-26</a>
+      <a href="/2026-27/dashboard26.html">2026-27</a>
+      <a href="/2027-28/dashboard27.html">2027-28</a>
+      <a href="/2028-29/dashboard28.html">2028-29</a>
+      <a href="/2029-30/dashboard29.html">2029-30</a>
+    </div>
   </nav>
 
   <div class="container-wrapper">
     <div class="container">
       <div class="card">
-        <h2>Activities</h2>
+        <h2>Teacher Initiatives</h2>
         <p>
-            For house and club teachers shared videos on compassion and resilience, 
-            shared google forms to answer questions based on brain teasers, conducted 
-            tambola on Indian culture and team building activities too.
+          Teachers shared inspirational videos on compassion and resilience to support the house and club activities.
+          They created engaging Google Forms with brain teasers to encourage critical thinking, 
+          organized Tambola sessions based on Indian culture, and conducted team-building activities to foster collaboration among students.
         </p>
       </div>
     </div>
   </div>
+  <script>
+    function toggleMenu() {
+      const navLinks = document.getElementById('navLinks');
+      navLinks.classList.toggle('nav-active');
+    }
+  </script>
 </body>
 </html>
