--- a/per/ma/public/2025-26/dashboard25.html
+++ b/per/ma/public/2025-26/dashboard25.html
@@ -16,34 +16,52 @@
             color: #333;
         }
         nav {
-            background: #000000;
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        nav a {
-            color: white;
-            margin: 0 1rem;
-            text-decoration: none;
-            font-weight: bold;
-            position: relative;
-        }
-        nav a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            background: white;
-            left: 0;
-            bottom: -4px;
-            transition: 0.3s ease;
-        }
-        nav a:hover::after {
-            width: 100%;
-        }
-        .container {
+      background: #000000;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: relative;
+    }
+    .nav-links {
+      display: flex;
+      gap: 1rem;
+    }
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      position: relative;
+      font-size: 1rem;
+    }
+    .nav-links a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      background: white;
+      left: 0;
+      bottom: -4px;
+      transition: 0.3s ease;
+    }
+    .nav-links a:hover::after {
+      width: 100%;
+    }
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+    .hamburger span {
+      height: 3px;
+      width: 25px;
+      background: white;
+      margin: 4px;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+    .container {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -54,14 +72,17 @@
             width: 90%;
             justify-content: space-between;
             margin-bottom: 2rem;
+            gap: 1.5rem;
+            flex-wrap: wrap;
         }
         .activities, .subject {
             border-radius: 10px;
             padding: 1.5rem;
-            width: 45%;
+            flex: 1 1 45%;
             background: #F5F5DC;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
+            min-width: 280px;
         }
         .activities:hover, .subject:hover {
             transform: translateY(-5px);
@@ -92,25 +113,74 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             text-align: center;
             transition: transform 0.3s ease;
+            margin-top: 1.5rem;
         }
         .evidence:hover {
             transform: translateY(-5px);
         }
         .evidence h2 {
             color: #000000;
+            margin-bottom: 1rem;
         }
+        .evidence a {
+      text-decoration: none;
+      color: #0072ff;
+      font-weight: bold;
+    }
+    .evidence a:hover {
+      text-decoration: underline;
+    }
+
+    /* --- Responsive styles for mobile --- */
+    @media (max-width: 768px) {
+      .top-section {
+        flex-direction: column;
+        align-items: center;
+      }
+      .activities, .subject {
+        width: 100%;
+      }
+      .nav-links {
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        background: #000000;
+        flex-direction: column;
+        width: 200px;
+        display: none;
+        text-align: right;
+        border-radius: 5px;
+        padding: 1rem;
+      }
+      .nav-links a {
+        margin: 0.5rem 0;
+      }
+      .hamburger {
+        display: flex;
+      }
+      .nav-active {
+        display: flex;
+      }
+    }
     </style>
 </head>
 <body>
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/2024-25/dashboard24.html">2024-25</a>
-        <a href="/2025-26/dashboard25.html">2025-26</a>
-        <a href="/2026-27/dashboard26.html">2026-27</a>
-        <a href="/2027-28/dashboard27.html">2027-28</a>
-        <a href="/2028-29/dashboard28.html">2028-29</a>
-        <a href="/2029-30/dashboard29.html">2029-30</a>
-    </nav>
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="nav-links" id="navLinks">
+          <a href="/index.html">Home</a>
+          <a href="/2024-25/dashboard24.html">2024-25</a>
+          <a href="/2025-26/dashboard25.html">2025-26</a>
+          <a href="/2026-27/dashboard26.html">2026-27</a>
+          <a href="/2027-28/dashboard27.html">2027-28</a>
+          <a href="/2028-29/dashboard28.html">2028-29</a>
+          <a href="/2029-30/dashboard29.html">2029-30</a>
+        </div>
+      </nav>
 
     <div class="container">
         <div class="top-section">
@@ -131,5 +201,11 @@
             <!-- Evidence yahan likho -->
         </div>
     </div>
+    <script>
+        function toggleMenu() {
+          const navLinks = document.getElementById('navLinks');
+          navLinks.classList.toggle('nav-active');
+        }
+      </script>
 </body>
 </html>
