--- a/per/ma/public/2029-30/myself.html
+++ b/per/ma/public/2029-30/myself.html
@@ -11,36 +11,32 @@
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f2f5;
       color: #333;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
-
     nav {
-      background: #000;
+      background: #000000;
       padding: 1rem;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      width: 100%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: relative;
     }
-
-    nav a {
+    .nav-links {
+      display: flex;
+      gap: 1rem;
+    }
+    .nav-links a {
       color: white;
-      margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
       position: relative;
+      font-size: 1rem;
     }
-
-    nav a::after {
+    .nav-links a::after {
       content: '';
       position: absolute;
       width: 0;
@@ -50,73 +46,142 @@
       bottom: -4px;
       transition: 0.3s ease;
     }
-
-    nav a:hover::after {
+    .nav-links a:hover::after {
       width: 100%;
     }
-
-    .container-wrapper {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      padding: 2rem;
-    }
-
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      width: 90%;
-      max-width: 1200px;
-    }
-
-    .card {
-      background: #e1c1c1;
-      border-radius: 16px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-      padding: 2rem;
-      text-align: center;
-      transition: all 0.3s ease;
+    .hamburger {
+      display: none;
+      flex-direction: column;
       cursor: pointer;
-      overflow: hidden;
     }
-
-    .card:hover {
-      transform: translateY(-10px) scale(1.02);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    .hamburger span {
+      height: 3px;
+      width: 25px;
+      background: white;
+      margin: 4px;
+      border-radius: 2px;
+      transition: all 0.3s ease;
     }
-
-    .card h2 {
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+    }
+    .top-section {
+      display: flex;
+      width: 90%;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+    .activities, .subject {
+      border-radius: 10px;
+      padding: 1.5rem;
+      flex: 1 1 45%;
+      background: #F5F5DC;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+      min-width: 280px;
+    }
+    .activities:hover, .subject:hover {
+      transform: translateY(-5px);
+    }
+    .activities h2, .subject h2 {
       margin-bottom: 1rem;
-      color: #222;
-      font-size: 1.8rem;
+      color: #000000;
     }
-
-    .card i {
-      font-size: 2.5rem;
+    .activities div {
+      margin: 0.75rem 0;
+      padding: 1rem;
+      background: #FFE5B4;
+      text-align: center;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: background 0.3s, transform 0.2s;
+    }
+    .activities div:hover {
+      background-color: #c6ccff;
+      transform: scale(1.02);
+    }
+    .evidence {
+      border-radius: 10px;
+      padding: 1.5rem;
+      width: 90%;
+      background: #ffffff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s ease;
+      margin-top: 1.5rem;
+    }
+    .evidence:hover {
+      transform: translateY(-5px);
+    }
+    .evidence h2 {
+      color: #000000;
       margin-bottom: 1rem;
-      color: #4a4a4a;
+    }
+    .evidence a {
+      text-decoration: none;
+      color: #0072ff;
+      font-weight: bold;
+    }
+    .evidence a:hover {
+      text-decoration: underline;
     }
 
-    .card p {
-      text-align: justify;
-      font-size: 1rem;
-      line-height: 1.6;
+    /* --- Responsive styles for mobile --- */
+    @media (max-width: 768px) {
+      .top-section {
+        flex-direction: column;
+        align-items: center;
+      }
+      .activities, .subject {
+        width: 100%;
+      }
+      .nav-links {
+        position: absolute;
+        top: 60px;
+        right: 10px;
+        background: #000000;
+        flex-direction: column;
+        width: 200px;
+        display: none;
+        text-align: right;
+        border-radius: 5px;
+        padding: 1rem;
+      }
+      .nav-links a {
+        margin: 0.5rem 0;
+      }
+      .hamburger {
+        display: flex;
+      }
+      .nav-active {
+        display: flex;
+      }
     }
-
   </style>
 </head>
 <body>
+
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/2024-25/dashboard24.html">2024-25</a>
-    <a href="/2025-26/dashboard25.html">2025-26</a>
-    <a href="/2026-27/dashboard26.html">2026-27</a>
-    <a href="/2027-28/dashboard27.html">2027-28</a>
-    <a href="/2028-29/dashboard28.html">2028-29</a>
-    <a href="/2029-30/dashboard29.html">2029-30</a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="nav-links" id="navLinks">
+      <a href="/index.html">Home</a>
+      <a href="/2024-25/dashboard24.html">2024-25</a>
+      <a href="/2025-26/dashboard25.html">2025-26</a>
+      <a href="/2026-27/dashboard26.html">2026-27</a>
+      <a href="/2027-28/dashboard27.html">2027-28</a>
+      <a href="/2028-29/dashboard28.html">2028-29</a>
+      <a href="/2029-30/dashboard29.html">2029-30</a>
+    </div>
   </nav>
 
   <div class="container-wrapper">
@@ -129,5 +194,12 @@
       </div>
     </div>
   </div>
+  
+  <script>
+    function toggleMenu() {
+      const navLinks = document.getElementById('navLinks');
+      navLinks.classList.toggle('nav-active');
+    }
+  </script>
 </body>
 </html>
