--- a/per/ma/public/2025-26/dashboard25.html
+++ b/per/ma/public/2025-26/dashboard25.html
@@ -178,7 +178,7 @@
     <div class="nav-links" id="navLinks">
       <a href="/index.html">Home</a>
       <a href="/2024-25/dashboard24.html">2024-25</a>
-      <a href="/2025-26/dashboard25.html"class="active">2025-26</a>
+      <div class="active">2025-26</div>
       <a href="/2026-27/dashboard26.html">2026-27</a>
       <a href="/2027-28/dashboard27.html">2027-28</a>
       <a href="/2028-29/dashboard28.html">2028-29</a>
