--- a/per/ma/public/2029-30/teaching.html
+++ b/per/ma/public/2029-30/teaching.html
@@ -153,7 +153,7 @@
       <a href="/2026-27/dashboard26.html">2026-27</a>
       <a href="/2027-28/dashboard27.html">2027-28</a>
       <a href="/2028-29/dashboard28.html">2028-29</a>
-      <a href="/2029-30/dashboard29.html" class="active">2029-30</a>
+      <a href="/2029-30/dashboard29.html" class="active">Back</a>
     </div>
   </nav>
 
