--- a/per/ma/public/2029-30/dashboard29.html
+++ b/per/ma/public/2029-30/dashboard29.html
@@ -50,6 +50,7 @@
     }
     .nav-links a.active {
       color: #ffd700; /* Gold color for active link */
+      background-color: #ffffff;
     }
     .hamburger {
       display: none;
