--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -133,6 +133,22 @@
     .evidence a:hover {
       text-decoration: underline;
     }
+    .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+.column {
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
 
     /* --- Responsive styles for mobile --- */
     @media (max-width: 768px) {
@@ -207,9 +223,30 @@
     <div class="evidence">
       <h2>Evidence</h2>
       <p>
+        Achievments 
         <a href="https://read.bookcreator.com/L3p09VMiRPMmNKeERZImhkCpQXx1/bJCkJ39JTcCHxqYv6hCoLQ" target="_blank">
           Visit Page
         </a>
+      </p>
+      <p>
+        Impacts
+        <div class="row">
+          <div class="column">
+            <img src="/2024-25/IMG-20250429-WA0001.jpg">
+            <img src="/2024-25/IMG-20250429-WA0002.jpg">
+            <img src="/2024-25/IMG-20250429-WA0003.jpg">
+            <img src="/2024-25/IMG-20250429-WA0004.jpg">
+            <img src="/2024-25/IMG-20250429-WA0005.jpg">
+            <img  src="/2024-25/IMG-20250429-WA0006.jpg">
+          </div>
+          <div class="column">            
+            <img src="/2024-25/IMG-20250429-WA0007.jpg">
+            <img src="/2024-25/IMG-20250429-WA0008.jpg">
+            <img src="/2024-25/IMG-20250429-WA0009.jpg">
+            <img src="/2024-25/IMG-20250429-WA0011.jpg">
+            <img src="/2024-25/IMG-20250429-WA0013.jpg">
+          </div>
+      </div>
       </p>
     </div>
   </div>
