--- a/per/ma/public/2024-25/dashboard24.html
+++ b/per/ma/public/2024-25/dashboard24.html
@@ -86,14 +86,14 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       transition: transform 0.3s ease;
       min-width: 280px;
-    }
-    .activities:hover, .subject:hover {
-      transform: translateY(-5px);
-    }
-    .activities h2, .subject h2 {
-      margin-bottom: 1rem;
-      color: #000000;
-    }
+      }
+      .activities:hover, .subject:hover {
+        transform: translateY(-5px);
+      }
+      .activities h2, .subject h2 {
+        margin-bottom: 1rem;
+        color: #000000;
+      }
     .activities div {
       margin: 0.75rem 0;
       padding: 1rem;
@@ -148,9 +148,10 @@
     }
     .impacts-title {
     margin-top: 2rem;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     color: #000;
+    text-align: left;
   }
 
   .gallery {
@@ -233,7 +234,7 @@
       </div>
       <div class="subject">
         <h2>Subject</h2>
-        <p>
+        <p style="text-align: justify;">
           Other than the allotted duties of worksheet, lesson plans, assessment sheets, Facebook reports, reviews, KPI,
           prepared children for games for Math quiz, shared questions for quiz, motivated students for making maze 
           on Canva, shared feedback using Padlet, content review, book review, and contribution.
