--- a/per/ma/public/2024-25/myself.html
+++ b/per/ma/public/2024-25/myself.html
@@ -161,7 +161,7 @@
     <div class="container">
       <div class="card">
         <h2>Activities</h2>
-        <p>
+        <p style="text-align: justify;">
           Completed various certification courses, mental health, use of AI, digital initiatives.
           Prepared students for traffic and energy conservation skits.
           Prepared students for International days.
