--- a/per/ma/public/2024-25/students.html
+++ b/per/ma/public/2024-25/students.html
@@ -162,7 +162,7 @@
       
       <div class="card">
         <h2>House Activities</h2>
-        <p>
+        <p style="text-align: justify;">
           House activities like recitation, story narration, and solo dance were conducted to build student confidence.
           Themes like compassion, acceptance, and resilience were chosen for story narration and recitation to align with the vision.
           Activities like sharing affirmations and Geeta Saar were also organized.
@@ -173,7 +173,7 @@
 
       <div class="card">
         <h2>Club Activities</h2>
-        <p>
+        <p style="text-align: justify;">
           In the Eco Club, students participated in Van Mahotsav, skits for traffic awareness, and energy conservation initiatives.
           Sessions on exercise and mental health were organized, along with activities on rainy season precautions, healthy diets, and first aid awareness.
           Students visited IDBA and old age homes to spread compassion.
