--- a/per/ma/public/2024-25/teaching.html
+++ b/per/ma/public/2024-25/teaching.html
@@ -161,7 +161,7 @@
     <div class="container">
       <div class="card">
         <h2>Teacher Initiatives</h2>
-        <p>
+        <p style="text-align: justify;">
           Teachers shared inspirational videos on compassion and resilience to support the house and club activities.
           They created engaging Google Forms with brain teasers to encourage critical thinking, 
           organized Tambola sessions based on Indian culture, and conducted team-building activities to foster collaboration among students.
